- WL#14824: Remove Python 3.6 support
- WL#14679: Allow custom class for data type conversion in Django backend
- WL#14665: SSPI Kerberos authentication for Windows (pure-python)
- BUG#33861549: Replace SHOW VARIABLES inefficient statements
- BUG#33747585: Fix error when using an expression as a column without an alias
- BUG#33729842: Character set 'utf8mb3' support
- BUG#28877987: Return bytes or bytearray if decoding fails
- BUG#27634914: Remove mention of unsupported functionality in Session docstring
- BUG#23338623: Add support for Decimal parsing in protocol.py
- BUG#23324748: Guarantee file closing of input files in optionfile
- BUG#21528553: Fix API inconsistency when using consume_results=True
- BUG#21498719: Fix conversion of Python bytearray (c-ext)
- BUG#20065830: NaN is not supported

v8.0.28
=======

- WL#14814: Remove support for TLS 1.0 and 1.1
- WL#14813: Add support for Python 3.10
- WL#14720: Support for Multi Factor authentication (pure Python)
- WL#14667: Support for Multi Factor authentication (c-ext)
- BUG#33486094: Stored value in Decimal field is returned as str on prepared pure python cursor
- BUG#33410592: Fix compiler warnings
- BUG#33409819: Fix failure when using a conversion class in CMySQLConnection
- BUG#27358941: Invalid types for params silently ignored in execute method

v8.0.27
=======

- WL#14710: Support OCI IAM authentication
- WL#14689: Fallback conversion to str for types incompatible with MySQL
- WL#14664: Allow SSPI Kerberos library usage with c-ext
- BUG#33177337: Connection with chained SSL certs fails with ssl_verify_identity
- BUG#28641350: mysqlx.result.Row objects cannot be printed directly

v8.0.26
=======

- WL#14634: Running unit tests against external server
- WL#14542: Deprecate TLS 1.0 and 1.1
- WL#14440: Support for authentication_kerberos_client authentication plugin
- WL#14306: Integrate QA tests into Connector/Python test suite
- WL#14237: Support query attributes